cmake_minimum_required (VERSION 3.5)

find_package(PhysFS REQUIRED)
if(ENABLE_NLS)
	find_package (Intl REQUIRED)
endif()

file(GLOB HEADERS "*.h")
file(GLOB SRC "*.cpp")

add_library(framework STATIC ${HEADERS} ${SRC})
target_link_libraries(framework PUBLIC Qt5::Core ${PHYSFS_LIBRARY})
target_link_libraries(framework PRIVATE microecc sha2 utf8proc)
if(ENABLE_NLS)
	target_include_directories(framework PRIVATE "${Intl_INCLUDE_DIRS}")
	target_link_libraries(framework PRIVATE ${Intl_LIBRARIES})
endif()
target_include_directories(framework PUBLIC "${PHYSFS_INCLUDE_DIR}" "${CMAKE_SOURCE_DIR}/3rdparty")
target_compile_definitions(framework PRIVATE "YY_NO_UNISTD_H")
target_compile_definitions(framework PUBLIC "_CRT_SECURE_NO_WARNINGS")
